# lilac

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: alpm.rs  aur.rs  build.rs  commands.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
tests/: Cargo.toml  integration.rs  unit.rs
